cmake_minimum_required(VERSION 2.8.4)
project(shadowsocks_libev)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    libasyncns/asyncns.c
    libasyncns/asyncns.h
    libcork/cli/commands.c
    libcork/core/allocator.c
    libcork/core/error.c
    libcork/core/gc.c
    libcork/core/hash.c
    libcork/core/ip-address.c
    libcork/core/mempool.c
    libcork/core/timestamp.c
    libcork/core/u128.c
    libcork/ds/array.c
    libcork/ds/bitset.c
    libcork/ds/buffer.c
    libcork/ds/dllist.c
    libcork/ds/file-stream.c
    libcork/ds/hash-table.c
    libcork/ds/managed-buffer.c
    libcork/ds/ring-buffer.c
    libcork/ds/slice.c
    libcork/include/libcork/cli/commands.h
    libcork/include/libcork/config/arch.h
    libcork/include/libcork/config/bsd.h
    libcork/include/libcork/config/config.h
    libcork/include/libcork/config/gcc.h
    libcork/include/libcork/config/linux.h
    libcork/include/libcork/config/macosx.h
    libcork/include/libcork/config/mingw32.h
    libcork/include/libcork/core/allocator.h
    libcork/include/libcork/core/api.h
    libcork/include/libcork/core/attributes.h
    libcork/include/libcork/core/byte-order.h
    libcork/include/libcork/core/callbacks.h
    libcork/include/libcork/core/error.h
    libcork/include/libcork/core/gc.h
    libcork/include/libcork/core/hash.h
    libcork/include/libcork/core/id.h
    libcork/include/libcork/core/mempool.h
    libcork/include/libcork/core/net-addresses.h
    libcork/include/libcork/core/timestamp.h
    libcork/include/libcork/core/types.h
    libcork/include/libcork/core/u128.h
    libcork/include/libcork/ds/array.h
    libcork/include/libcork/ds/bitset.h
    libcork/include/libcork/ds/buffer.h
    libcork/include/libcork/ds/dllist.h
    libcork/include/libcork/ds/hash-table.h
    libcork/include/libcork/ds/managed-buffer.h
    libcork/include/libcork/ds/ring-buffer.h
    libcork/include/libcork/ds/slice.h
    libcork/include/libcork/ds/stream.h
    libcork/include/libcork/helpers/errors.h
    libcork/include/libcork/helpers/gc.h
    libcork/include/libcork/helpers/posix.h
    libcork/include/libcork/os/files.h
    libcork/include/libcork/os/process.h
    libcork/include/libcork/os/subprocess.h
    libcork/include/libcork/threads/atomics.h
    libcork/include/libcork/threads/basics.h
    libcork/include/libcork/cli.h
    libcork/include/libcork/config.h
    libcork/include/libcork/core.h
    libcork/include/libcork/ds.h
    libcork/include/libcork/os.h
    libcork/include/libcork/threads.h
    libcork/posix/directory-walker.c
    libcork/posix/env.c
    libcork/posix/exec.c
    libcork/posix/files.c
    libcork/posix/process.c
    libcork/posix/subprocess.c
    libcork/pthreads/thread.c
    libev/ev++.h
    libev/ev.c
    libev/ev.h
    libev/ev_epoll.c
    libev/ev_kqueue.c
    libev/ev_poll.c
    libev/ev_port.c
    libev/ev_select.c
    libev/ev_vars.h
    libev/ev_win32.c
    libev/ev_wrap.h
    libev/event.c
    libev/event.h
    libipset/bdd/assignments.c
    libipset/bdd/basics.c
    libipset/bdd/bdd-iterator.c
    libipset/bdd/expanded.c
    libipset/bdd/reachable.c
    libipset/bdd/read.c
    libipset/bdd/write.c
    libipset/include/ipset/bdd/nodes.h
    libipset/include/ipset/bits.h
    libipset/include/ipset/errors.h
    libipset/include/ipset/ipset.h
    libipset/include/ipset/logging.h
    libipset/map/allocation.c
    libipset/map/inspection.c
    libipset/map/ipv4_map.c
    libipset/map/ipv6_map.c
    libipset/map/storage.c
    libipset/set/allocation.c
    libipset/set/inspection.c
    libipset/set/ipv4_set.c
    libipset/set/ipv6_set.c
    libipset/set/iterator.c
    libipset/set/storage.c
    libipset/general.c
    src/acl.c
    src/acl.h
    src/cache.c
    src/cache.h
    src/encrypt.c
    src/encrypt.h
    src/include.h
    src/jconf.c
    src/jconf.h
    src/json.c
    src/json.h
    src/local.c
    src/local.h
    src/redir.c
    src/redir.h
    src/server.c
    src/server.h
    src/shadowsocks.h
    src/socks5.h
    src/tunnel.c
    src/tunnel.h
    src/udprelay.c
    src/udprelay.h
    src/uthash.h
    src/utils.c
    src/utils.h
    src/win32.c
    src/win32.h)

include_directories(libcork/include)
include_directories(libipset/include)

add_executable(shadowsocks_libev ${SOURCE_FILES})